--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "login",
-  "private": true,
+  "homepage": "https://Guilherme-Felicio.github.io/chat/",
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview --port 5000",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "localforage": "^1.10.0",
@@ -28,6 +31,7 @@
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "gh-pages": "^5.0.0",
     "postcss": "^8.4.25",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
