--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.1",
+    "axios": "^1.6.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
     "react-router-dom": "^6.14.1",
+    "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
     "styled-components": "^6.0.2",
     "yup": "^1.2.0"
