--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "dependencies": {
     "@hookform/resolvers": "^3.1.1",
     "axios": "^1.6.2",
+    "i18next": "^23.7.8",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
+    "react-i18next": "^13.5.0",
     "react-router-dom": "^6.14.1",
     "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
