--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hook-form": "^7.45.2",
     "react-i18next": "^13.5.0",
     "react-router-dom": "^6.14.1",
+    "react-select": "^5.8.0",
     "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
     "styled-components": "^6.0.2",
